--- a/index.html
+++ b/index.html
@@ -1452,7 +1452,7 @@ function aplicarEstadoChat(user) {
   if (chatTrancado) {
     chatLock.textContent = "🔐";
     if (user && user.email === "zeuszeuz007@gmail.com") {
-      chatInput.placeholder = "🔓 Pode digitar ADM";
+      chatInput.placeholder = "🔓 Pode digitar ADM...";
       chatInput.disabled = false;
     } else {
       chatInput.placeholder = "🔒 Chat trancado para anuncio";
