--- a/index.html
+++ b/index.html
@@ -730,14 +730,38 @@ position: relative;
   text-align: center;
 
   background-image:
-    linear-gradient(to bottom, rgba(20, 0, 40, 0.8) 0%, rgba(0, 0, 0, 0.95) 80%),
+    linear-gradient(to bottom, rgba(20, 0, 40, 0.8) 55%, rgba(40, 0, 70, 0.98) 85%),
     url("https://cdn.jsdelivr.net/gh/patounic/patounic@latest/imagem/wallpaper.png.webp");
   background-size: cover;
   background-position: top;
   background-repeat: no-repeat;
   background-attachment: fixed;
+  direction: rtl;
+}
+#site-content > * {
+  direction: ltr; /* volta o conteúdo para o lado normal */
 }
 
+/* 🔹 Estilo da barra de rolagem (Chrome, Edge, Safari) */
+#site-content::-webkit-scrollbar {
+  width: 12px;               /* largura da barra */
+}
+#site-content::-webkit-scrollbar-track {
+  background: #1a1a1a;       /* fundo da área da barra */
+}
+#site-content::-webkit-scrollbar-thumb {
+  background-color: #777;    /* cor cinza da barra */
+  border-radius: 6px;        /* borda arredondada */
+}
+#site-content::-webkit-scrollbar-thumb:hover {
+  background-color: #999;    /* cinza mais claro ao passar o mouse */
+}
+
+/* 🔹 Firefox */
+#site-content {
+  scrollbar-width: thin;
+  scrollbar-color: #777 #1a1a1a;
+}
 .icon-bar {
   display: flex;
   align-items: center;
