--- a/index.html
+++ b/index.html
@@ -736,25 +736,26 @@ position: relative;
   background-position: top;
   background-repeat: no-repeat;
   background-attachment: fixed;
+  overflow-y: auto;
   direction: rtl;
 }
 #site-content > * {
-  direction: ltr; /* volta o conteúdo para o lado normal */
+  direction: ltr;     /* ✅ conteúdo continua normal */
 }
 
-/* 🔹 Estilo da barra de rolagem (Chrome, Edge, Safari) */
+/* 🔹 Estilo do scroll */
 #site-content::-webkit-scrollbar {
-  width: 12px;               /* largura da barra */
+  width: 12px;
 }
 #site-content::-webkit-scrollbar-track {
-  background: #1a1a1a;       /* fundo da área da barra */
+  background: #1a1a1a;
 }
 #site-content::-webkit-scrollbar-thumb {
-  background-color: #777;    /* cor cinza da barra */
-  border-radius: 6px;        /* borda arredondada */
+  background-color: #777;
+  border-radius: 6px;
 }
 #site-content::-webkit-scrollbar-thumb:hover {
-  background-color: #999;    /* cinza mais claro ao passar o mouse */
+  background-color: #999;
 }
 
 /* 🔹 Firefox */
