--- a/index.html
+++ b/index.html
@@ -648,8 +648,7 @@ margin-top: 1 px;
 
 html, body {
   min-height: 100%;
-  overflow-x: hidden;
-  overflow-y: auto;
+  overflow: hidden; /* 🚫 sem scroll global */
   color: white;
 }
 
