--- a/index.html
+++ b/index.html
@@ -668,7 +668,8 @@ margin-top: 1 px;
 
 html, body {
   min-height: 100%;
-  overflow: auto; /* 🚫 sem scroll global */
+  overflow-x: hidden; /* 🔒 remove o scroll horizontal */
+  overflow-y: auto;
   color: white;
 }
 
