--- a/index.html
+++ b/index.html
@@ -702,7 +702,7 @@ html, body {
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
-      width: 100vw;
+      width: 100%;
       height: 100vh;
       display: flex;
       flex-direction: column;
