--- a/index.html
+++ b/index.html
@@ -629,7 +629,7 @@ margin-top: 1 px;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   display: flex;
   flex-direction: column;
