--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
 <link rel="preload" as="image" href="https://cdn.jsdelivr.net/gh/patounic/patounic@latest/imagem/Picsart_25-07-09_14-16-08-080_LE_upscale_balanced_x4_light_ai_30_tone_enhance_30_color_enhance_30 (1).webp">
 <link rel="preload" as="image" href="https://cdn.jsdelivr.net/gh/patounic/patounic@latest/imagem/wallpaper.png.webp">
   <style>
+#episodio-page {
+  background-image:
+    linear-gradient(to bottom, rgba(20, 0, 40, 0.8) 55%, rgba(40, 0, 70, 0.98) 85%),
+    url("https://cdn.jsdelivr.net/gh/patounic/patounic@latest/imagem/wallpaper.png.webp");
+  background-size: cover;
+  background-position: top;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+
+  min-height: 100vh;   /* garante que cobre a tela toda */
+  color: white;
+}
+
 /* 🔍 Campo de pesquisa no estilo "caixa" */
 .menu-input {
   padding: 8px 15px;
@@ -1000,6 +1013,58 @@ position: relative;
 </head>
 <body>
 
+<!-- Página do Episódio -->
+<div id="episodio-page" style="display:none; padding:20px; text-align:center;">
+  <!-- botão para voltar pra home -->
+  <button onclick="voltarHome()" 
+          style="margin-bottom:20px; padding:10px 20px; background:#5865f2; color:white; border:none; border-radius:6px; cursor:pointer;">
+    ⬅ Voltar à Home
+  </button>
+
+  <h1 id="episodio-titulo">Episódio</h1>
+
+  <!-- player -->
+  <div style="max-width:900px; margin:auto;">
+    <iframe id="episodio-video" width="100%" height="500" style="border:none; border-radius:10px;" allowfullscreen></iframe>
+  </div>
+
+<!-- botões de navegação -->
+<div style="margin-top:15px; display:flex; justify-content:space-between; max-width:900px; margin-left:auto; margin-right:auto;">
+  <button id="btn-voltar-ep" onclick="voltarEpisodio()" 
+          style="padding:10px 20px; background:#444; color:white; border:none; border-radius:6px; cursor:pointer;">
+    ⬅ Voltar
+  </button>
+
+  <button id="btn-pular-ep" onclick="pularEpisodio()" 
+          style="padding:10px 20px; background:#5865f2; color:white; border:none; border-radius:6px; cursor:pointer;">
+    ➡ Pular
+  </button>
+</div>
+
+  <!-- seção de mais episódios/extras -->
+  <h2 style="margin-top:30px;">Mais episódios</h2>
+  <div style="display:flex; flex-wrap:wrap; justify-content:center; gap:20px; margin-top:20px;">
+    <div class="card" 
+         style="background-image:url('https://i.pinimg.com/736x/f2/36/96/f2369629e021479d5d23654e62aa0e3a.jpg'); width:200px; height:120px; background-size:cover; background-position:center; border-radius:10px; cursor:pointer; display:flex; align-items:flex-end; justify-content:center; color:white; font-weight:bold;"
+         onclick="abrirEpisodio(4)">
+      Extra 1
+    </div>
+
+    <div class="card" 
+         style="background-image:url('https://i.pinimg.com/736x/f2/36/96/f2369629e021479d5d23654e62aa0e3a.jpg'); width:200px; height:120px; background-size:cover; background-position:center; border-radius:10px; cursor:pointer; display:flex; align-items:flex-end; justify-content:center; color:white; font-weight:bold;"
+         onclick="abrirEpisodio(5)">
+      Extra 2
+    </div>
+
+    <div class="card" 
+         style="background-image:url('https://i.pinimg.com/736x/f2/36/96/f2369629e021479d5d23654e62aa0e3a.jpg'); width:200px; height:120px; background-size:cover; background-position:center; border-radius:10px; cursor:pointer; display:flex; align-items:flex-end; justify-content:center; color:white; font-weight:bold;"
+         onclick="abrirEpisodio(6)">
+      Extra 3
+    </div>
+  </div>
+</div>
+
+
  <!-- Loading -->
 <div id="loading-screen">
   <img src="https://images-ext-1.discordapp.net/external/JEwRwx1pMS_nwX0t_9q6jA_xWzfaueA-zCgYtIihxC4/%3Fsize%3D96%26animated%3Dtrue/https/cdn.discordapp.com/emojis/1326098477712805918.webp?animated=true&width=81&height=81" alt="Carregando...">
@@ -1353,12 +1418,12 @@ position: relative;
   <div class="video-wrapper">
     <div class="video-row" id="serie-temporada1">
 
-      <!-- Episódio 1 -->
-      <div class="video-card"
-        onclick="abrirModal('https://www.youtube.com/embed/ScMzIvxBSi4?rel=0&modestbranding=1&iv_load_policy=3')"
-        style="background-image: url('https://img.youtube.com/vi/ScMzIvxBSi4/hqdefault.jpg');">
-        <span class="video-title">Episódio 1</span>
-      </div>
+<div class="video-card"
+  onclick="abrirEpisodio(1)"
+  style="background-image: url('https://mediaproxy.tvtropes.org/width/1200/https://static.tvtropes.org/pmwiki/pub/images/img_1714_47.jpeg');">
+  <span class="video-title">Episódio 1</span>
+</div>
+
 
       <!-- Episódio 2 -->
       <div class="video-card"
@@ -1385,8 +1450,7 @@ position: relative;
     </button>
   </div>
 </div>
-
-
+bdy
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
     import {
@@ -2568,6 +2632,70 @@ function cancelarResposta() {
 
 window.cancelarResposta = cancelarResposta;
 
+let episodioAtual = 1;
+const totalEpisodios = 6;
+
+function abrirEpisodio(num) {
+  episodioAtual = num; // salva o número atual
+
+  document.getElementById("site-content").style.display = "none";
+  document.getElementById("episodio-page").style.display = "block";
+
+  const titulo = document.getElementById("episodio-titulo");
+  const video = document.getElementById("episodio-video");
+
+  if (num === 1) {
+    titulo.textContent = "Episódio 1";
+    video.src = "https://www.youtube.com/embed/HwAPLk_sQ3w?si=LB69e_mwzCPFronc?rel=0&modestbranding=1";
+} else if (num === 2) {
+  titulo.textContent = "Extra 1";
+  video.src = "https://www.youtube.com/embed/L_jWHffIx5E?rel=0&modestbranding=1";
+} else if (num === 3) {
+  titulo.textContent = "Extra 2";
+  video.src = "https://www.youtube.com/embed/L_jWHffIx5E?rel=0&modestbranding=1";
+} else if (num === 4) {
+  titulo.textContent = "Extra 3";
+  video.src = "https://www.youtube.com/embed/L_jWHffIx5E?rel=0&modestbranding=1";
+  }
+  atualizarControles();
+}
+
+function voltarHome() {
+  // limpa o vídeo
+  document.getElementById("episodio-video").src = "";
+  // volta para home
+  document.getElementById("episodio-page").style.display = "none";
+  document.getElementById("site-content").style.display = "block";
+}
+window.abrirEpisodio = abrirEpisodio;
+window.voltarHome = voltarHome;
+
+function voltarEpisodio() {
+  if (episodioAtual > 1) {
+    abrirEpisodio(episodioAtual - 1);
+  }
+}
+
+function pularEpisodio() {
+  if (episodioAtual < totalEpisodios) {
+    abrirEpisodio(episodioAtual + 1);
+  }
+}
+
+function atualizarControles() {
+  const btnVoltar = document.getElementById("btn-voltar-ep");
+  const btnPular = document.getElementById("btn-pular-ep");
+
+  // se estiver no primeiro episódio, esconde o botão voltar
+  btnVoltar.style.display = episodioAtual === 1 ? "none" : "inline-block";
+  // se estiver no último episódio, esconde o botão pular
+  btnPular.style.display = episodioAtual === totalEpisodios ? "none" : "inline-block";
+}
+
+// expõe globalmente
+window.abrirEpisodio = abrirEpisodio;
+window.voltarEpisodio = voltarEpisodio;
+window.pularEpisodio = pularEpisodio;
   </script>
 <div id="video-modal" class="video-modal">
   <div class="modal-content">
