--- a/index.html
+++ b/index.html
@@ -519,8 +519,9 @@ margin-top: 1 px;
   display: none; /* Chrome, Safari */
 }
 .video-card {
-  width: 260px;
-  height: 140px;
+  width: 300px;
+  height: 170px;
+border-radius: 5px;
   background-color: #000;
   background-size: cover;
   background-position: center;
@@ -537,11 +538,37 @@ margin-top: 1 px;
   position: relative;
   overflow: visible;
 }
-.video-card,
-.video-card * {
-  border: none !important;
-  border-radius: 0 !important;
+.card:hover {
+  background-color: #5865f2; /* mesma cor de hover dos botões */
+  transform: scale(1.05);    /* aumenta suavemente igual aos botões */
+  cursor: pointer;
+  color: white;
 }
+  /* Container centralizado e espaçamento entre os cards */
+  .cards-container {
+    display: flex;
+    justify-content: center; /* centraliza horizontalmente */
+    gap: 20px;               /* espaço entre os cards */
+    margin-top: 20px;
+  }
+
+  /* Estilo dos cards */
+  .card {
+    width: 220px;
+    height: 300px;
+    background-image: url('https://i.pinimg.com/1200x/bb/23/06/bb23065157879035b64823c4d250fc59.jpg');
+    background-size: cover;
+    background-position: center;
+    border-radius: 2px;
+    cursor: pointer;
+    display: flex;
+    align-items: flex-end;      /* texto na parte inferior */
+    justify-content: center;    /* centraliza o texto horizontalmente */
+    color: white;
+    font-weight: bold;
+    text-align: center;
+  }
+
 .video-card:hover {
   background-color: #5865f2; /* mesma cor de hover dos botões */
   transform: scale(1.05);    /* aumenta suavemente igual aos botões */
@@ -1044,19 +1071,19 @@ position: relative;
   <!-- seção de mais episódios/extras -->
   <h2 style="margin-top:30px;">Mais episódios</h2>
   <div style="display:flex; flex-wrap:wrap; justify-content:center; gap:20px; margin-top:20px;">
-    <div class="card" 
+    <div class="cards-container" 
          style="background-image:url('https://i.pinimg.com/736x/f2/36/96/f2369629e021479d5d23654e62aa0e3a.jpg'); width:200px; height:120px; background-size:cover; background-position:center; border-radius:10px; cursor:pointer; display:flex; align-items:flex-end; justify-content:center; color:white; font-weight:bold;"
          onclick="abrirEpisodio(4)">
       Extra 1
     </div>
 
-    <div class="card" 
+    <div class="cards-container" 
          style="background-image:url('https://i.pinimg.com/736x/f2/36/96/f2369629e021479d5d23654e62aa0e3a.jpg'); width:200px; height:120px; background-size:cover; background-position:center; border-radius:10px; cursor:pointer; display:flex; align-items:flex-end; justify-content:center; color:white; font-weight:bold;"
          onclick="abrirEpisodio(5)">
       Extra 2
     </div>
 
-    <div class="card" 
+    <div class="cards-container" 
          style="background-image:url('https://i.pinimg.com/736x/f2/36/96/f2369629e021479d5d23654e62aa0e3a.jpg'); width:200px; height:120px; background-size:cover; background-position:center; border-radius:10px; cursor:pointer; display:flex; align-items:flex-end; justify-content:center; color:white; font-weight:bold;"
          onclick="abrirEpisodio(6)">
       Extra 3
@@ -1418,39 +1445,32 @@ position: relative;
   <div class="video-wrapper">
     <div class="video-row" id="serie-temporada1">
 
-<div class="video-card"
-  onclick="abrirEpisodio(1)"
-  style="background-image: url('https://mediaproxy.tvtropes.org/width/1200/https://static.tvtropes.org/pmwiki/pub/images/img_1714_47.jpeg');">
-  <span class="video-title">Episódio 1</span>
-</div>
-
-
-      <!-- Episódio 2 -->
-      <div class="video-card"
-        onclick="abrirModal('https://www.youtube.com/embed/tgbNymZ7vqY?rel=0&modestbranding=1&iv_load_policy=3')"
-        style="background-image: url('https://img.youtube.com/vi/tgbNymZ7vqY/hqdefault.jpg');">
-        <span class="video-title">Episódio 2</span>
-      </div>
-
-      <!-- Episódio 3 -->
-      <div class="video-card"
-        onclick="abrirModal('https://www.youtube.com/embed/L_jWHffIx5E?rel=0&modestbranding=1&iv_load_policy=3')"
-        style="background-image: url('https://img.youtube.com/vi/L_jWHffIx5E/hqdefault.jpg');">
-        <span class="video-title">Episódio 3</span>
-      </div>
-
+<div style="display: flex; justify-content: center; gap: 20px;">
+  <div class="card" 
+       style="background-image:url('https://i.pinimg.com/1200x/bb/23/06/bb23065157879035b64823c4d250fc59.jpg'); 
+              width:220px; height:300px; 
+              background-size:cover; background-position:center; 
+              border-radius: 2px; cursor:pointer; 
+              display:flex; align-items:flex-end; justify-content:center; 
+              color:white; font-weight:bold;"
+       onclick="abrirEpisodio(1)">
+    Episódio 1
+  </div>
+  </div>
     </div>
 
     <!-- Setas de rolagem (se quiser navegar pelos episódios) -->
     <button class="scroll-arrow left" onclick="scrollVideos('left', 'serie-temporada1')">
-      <img src="https://cdn-icons-png.flaticon.com/512/271/271220.png" alt="Anterior" class="arrow-icon" />
+      <img src="https://images-ext-1.discordapp.net/external/5I9l_aV2usJiejAlqrPa1vMClhSw8uAU4aC7lsJFDl8/%3Fsize%3D96/https/cdn.discordapp.com/emojis/878689330296680459.webp?format=webp&width=86&height=86" alt="Anterior" class="arrow-icon" />
     </button>
     <button class="scroll-arrow right" onclick="scrollVideos('right', 'serie-temporada1')">
-      <img src="https://cdn-icons-png.flaticon.com/512/271/271228.png" alt="Próximo" class="arrow-icon" />
+      <img src="https://images-ext-1.discordapp.net/external/lJHezHUb-87G72093K_C72bEzxXRPmGO3a5BPC266fI/%3Fsize%3D96/https/cdn.discordapp.com/emojis/861984565300297738.webp?format=webp&width=86&height=86" alt="Próximo" class="arrow-icon" />
     </button>
   </div>
 </div>
-bdy
+patounic beta: 0.0
+o site ainda está em desenvolvimento! 
+
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
     import {
