--- a/index.html
+++ b/index.html
@@ -781,6 +781,14 @@ position: relative;
       cursor: pointer;
       font-weight: bold;
     }
+.logo-superior-esquerda {
+  position: absolute;
+  top: 13px; 
+  left: 470px;
+  width: 200px; 
+  height: auto;
+  z-index: 10;
+}
 
 #site-content {
   display: none;
@@ -1143,7 +1151,11 @@ position: relative;
 
 <!-- Conteúdo principal -->
 <div id="site-content" style="display: none;">
-  
+
+    <!-- Logo no topo -->
+  <img src="https://cdn.jsdelivr.net/gh/patounic/patounic@latest/imagem/Picsart_25-07-15_22-26-46-902.png" 
+       alt="Logo" class="logo-superior-esquerda">
+
   <!-- Barra de ícones fixa no topo -->
   <div class="icon-bar" id="icon-bar">
     <div id="movie-icon" class="movie-icon" title="">
