--- a/index.html
+++ b/index.html
@@ -781,7 +781,7 @@ position: relative;
       cursor: pointer;
       font-weight: bold;
     }
-.logo-superior-esquerda {
+.logo-superior-esquerd1a {
   position: absolute;
   top: 13px; 
   left: 470px;
@@ -1154,7 +1154,7 @@ position: relative;
 
     <!-- Logo no topo -->
   <img src="https://cdn.jsdelivr.net/gh/patounic/patounic@latest/imagem/Picsart_25-07-15_22-26-46-902.png" 
-       alt="Logo" class="logo-superior-esquerda">
+       alt="Logo" class="logo-superior-esquerd1a">
 
   <!-- Barra de ícones fixa no topo -->
   <div class="icon-bar" id="icon-bar">
