--- a/index.html
+++ b/index.html
@@ -806,6 +806,7 @@ position: relative;
 }
 
 #site-content {
+position: relative;
   display: none;
   padding: 2rem;
   padding-top: 20rem;
@@ -1209,8 +1210,8 @@ position: relative;
 
 <!-- Caixa do chat -->
 <div id="chat-box" style="
-  position: fixed;
-  top: 45%;
+  position: absolute;
+  top: 365px;
   right: 20px;
   transform: translateY(-50%);
   width: 380px;
