--- a/index.html
+++ b/index.html
@@ -671,7 +671,6 @@ border-radius: 5px;
   color: black;            /* texto preto */
 }
 
-
 .menu-item:first-child {
   margin-left: 0; /* Retira margem esquerda do primeiro item */
 }
@@ -802,8 +801,8 @@ position: relative;
     }
 .logo-superior-esquerd1a {
   position: fixed;
-  top: 13px; 
-  left: 405px;
+  top: 12px; 
+  left: 415px;
   width: 200px; 
   height: auto;
   z-index: 1002; 
@@ -900,7 +899,7 @@ border-bottom: 1px solid rgba(0,0,0,0.05);
       right: 0;
       width: 100%;
       z-index: 10;
-      gap: 1rem;
+       gap: 0.5rem;
     }
 
     .search-container {
@@ -936,6 +935,7 @@ border-bottom: 1px solid rgba(0,0,0,0.05);
 
     .profile-container {
       position: relative;
+margin-right: 25px;
     }
 
     .profile-icon {
@@ -1208,8 +1208,9 @@ border-bottom: 1px solid rgba(0,0,0,0.05);
 </div>
     <!-- Menu Dropdown -->
     <div id="dropdown-menu" class="dropdown-menu">
-      <div id="home-menu" class="menu-item">Home</div>
-      <div id="categoria-menu" class="menu-item">Categoria</div>
+<div id="home-menu" class="menu-item" data-text="Home">Home</div>
+<div id="categoria-menu" class="menu-item" data-text="Categoria">Categoria</div>
+
   <input 
     type="text" 
     id="pesquisar-input" 
