--- a/index.html
+++ b/index.html
@@ -850,7 +850,7 @@ position: relative;
   position: absolute;
   top: 0;
   left: 0;
-  width: 50%;        /* ou 100% se quiser toda a barra */
+  width: 50rem;        /* ou 100% se quiser toda a barra */
   height: 100%;
 
   /* fundo com gradiente e blur */
