--- a/index.html
+++ b/index.html
@@ -952,34 +952,44 @@ margin-right: 35px;
   transition: transform 0.2s ease;
   will-change: transform;
     }
-
-    .profile-menu {
-      display: none;
-      position: absolute;
-      right: 0;
-      top: 50px;
-      background-color: #111;
-      border-radius: 6px;
-      overflow: hidden;
-      z-index: 20;
-      width: 120px;
-      box-shadow: 0 0 5px #000;
-    }
-
-/* Caixa do menu de perfil */
-#profile-menu {
+.profile-menu {
   background-color: rgba(128, 0, 128, 0.2); /* Roxo translúcido */
-  border-radius: 0; /* Canto quadrado */
+  border-radius: 0;
   padding: 0;
+
+  /* 🔥 REMOVA ESSA LINHA
   display: none;
+  */
+
+  display: flex;
   flex-direction: column;
   position: absolute;
   right: 0;
-    top: calc(100% + 13px); /* empurra 10px abaixo do avatar */
-  border: 1px solid rgba(255, 255, 255, 0.1); /* mais transparente */
+  top: calc(100% + 13px);
+  border: 1px solid rgba(255, 255, 255, 0.1);
   min-width: 160px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.4);
   z-index: 999;
+
+  opacity: 0;                 /* invisível no início */
+  transform: translateY(-15px);
+  pointer-events: none;       /* não clicável */
+  transition: opacity 0.3s ease, transform 0.3s ease;
+}
+
+.profile-menu::before {
+  content: "";
+  position: absolute;
+  top: -15px;
+  left: 0;
+  width: 100%;
+  height: 15px; /* a “ponte invisível” */
+}
+
+.profile-container:hover .profile-menu {
+  opacity: 1;
+  transform: translateY(0);
+  pointer-events: auto;
 }
 
 /* Itens padrão */
@@ -2030,45 +2040,18 @@ profileIcon.addEventListener("mouseleave", () => {
   if (!menuAberto) pararRotacao();
 });
 
-profileIcon.addEventListener("click", (e) => {
-  e.stopPropagation();
-  menuAberto = !menuAberto;
+// REMOVE completamente o trecho que usava "click" e menuAberto
+// profileIcon.addEventListener("click", (e) => { ... });
 
-  profileMenu.style.display = menuAberto ? "block" : "none";
-
-  if (menuAberto) {
-    iniciarRotacao(1); // gira para a direita
-
-    // FECHA O CHAT, SE ESTIVER ABERTO
-    const chatBox = document.getElementById("chat-box");
-    if (chatBox.style.display === "flex") {
-      chatBox.style.display = "none";
-      
-      // Reativa setas de rolagem dos vídeos
-      const setas = document.querySelectorAll(".scroll-arrow");
-      setas.forEach(seta => {
-        seta.style.display = "";
-      });
-    }
-
-  } else {
-    pararRotacao();
-  }
+// Agora só deixa os efeitos de rotação no hover:
+profileIcon.addEventListener("mouseenter", () => {
+  iniciarRotacao(1); // gira pra direita
 });
 
-
-document.body.addEventListener("click", () => {
-  if (menuAberto) {
-    menuAberto = false;
-    profileMenu.style.display = "none";
-    pararRotacao();
-  }
+profileIcon.addEventListener("mouseleave", () => {
+  pararRotacao(); // para quando sai
 });
 
-
-    document.body.onclick = () => {
-      profileMenu.style.display = "none";
-    };
 
 let authReady = false;
 
