--- a/index.html
+++ b/index.html
@@ -953,8 +953,7 @@ margin-right: 35px;
   will-change: transform;
     }
 .profile-menu {
-  background-color: rgba(128, 0, 128, 0.2); /* Roxo translúcido */
-  border-radius: 0;
+background-color: rgba(75, 0, 130, 0.35);  border-radius: 0;
   padding: 0;
 
   /* 🔥 REMOVA ESSA LINHA
